# updated_UNICC

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BENCHMARK_VALIDATION_PLAN.md  README.md  README_ar.md  README_es.md  README_fr.md  README_ru.md  README_zh.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
app/: main.py  orchestrator.py  safe_schemas.py
examples/: evaluation_request.json  evaluation_request_behavior.json  evaluation_request_hybrid.json  evaluation_request_local.json
reports/: 033eb019-1774-4e4f-91df-f184e3fa547c_APPROVE.json  0419f827-1210-42a4-96dc-3e386de35cc2_APPROVE.json  04ff9aff-cf8d-4cca-bf1a-178739aee45f_APPROVE.json  08339d6e-52c8-44ed-b26f-b241c4889aa3_APPROVE.json  09e69c3f-80b9-4654-8a13-047121f4ff58_APPROVE.json  0d023cbd-8139-42e4-8c93-4ad7af5764bd_HOLD.json  13366301-0067-465d-9337-c05da50e5d0a_HOLD.json  13390ebc-8e95-48a2-8a95-38d38b214f49_APPROVE.json  16bf59c9-4104-4632-8546-2b0c890e348e_APPROVE.json  1e649e75-99c2-4eed-bc50-45276ac51b2b_APPROVE.json  1f8f3546-de59-4fda-bbde-0e69455c6280_APPROVE.json  2187effc-6e59-4703-bee6-cb6c0990cf56_APPROVE.json  223b5501-864c-4cdf-be03-2e4c6a6acd6e_APPROVE.json  32440274-f1cf-4b11-9f11-e81d63f012d3_APPROVE.json  38fb57fb-0c02-47cc-97d0-2571d4c34a3e_APPROVE.json  3f3abcb9-60fc-41ed-93d6-86abf9d48ae9_HOLD.json  40f7010c-1f10-4fcc-ba6c-46f6f2b6bd98_APPROVE.json  57f80087-e098-4c9b-851d-f67a3be68a5a_APPROVE.json  6398479a-146d-4239-ae77-f4a9bd59c6bb_APPROVE.json  6d4186e6-0503-48ea-9034-73a694813d64_APPROVE.json  (+16 more)
(+46 files in other folders)
