[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-safety-lab"
version = "0.3.0"
description = "UNICC integrated AI safety lab for multi-expert repository safety evaluation"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "streamlit>=1.40.0",
  "httpx>=0.28.0",
  "reportlab",
  "python-multipart",
]

[project.scripts]
ai-safety-lab-eval = "app.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
local-hf = [
  "transformers>=4.51.0",
  "torch>=2.2.0",
  "safetensors>=0.4.0",
  "sentencepiece>=0.2.0",
  "huggingface_hub>=0.30.0",
  "accelerate>=0.30.0",
]

[tool.setuptools]
packages = [
  "app",
  "app.analyzers",
  "app.experts",
  "app.integrations",
  "app.intake",
  "app.reporting",
  "app.slm",
  "app.targets",
  "app.translation",
  "model_assets",
  "model_assets.benchmark_cases",
  "model_assets.council",
  "model_assets.schemas",
  "services",
]

[tool.setuptools.package-data]
model_assets = [
  "benchmark_cases/*.json",
  "prompts/*.txt",
  "schemas/*.json",
]
